# recursive-engine--generative-entity

./: CLAUDE.md  DISCOVERY.md  GEMINI.md  README.md  pyproject.toml  value-repos.json
.github/workflows/: ci.yml  codeql.yml
.rege_archive/checkpoints/: CHECKPOINT_REGISTRY.json
.rege_archive/checkpoints/snapshots/: SNAP_20260621_222716.json  SNAP_20260621_222901.json
docs/source-materials/specs/: AIShell.txt  mobile-first-interaction.txt  prompt-ai-handoff.txt
rege/tests/: test_maxmsp_osc_connect_coverage.py
